use thrust to make mandelbrot

--- a/mandelbrot/Makefile
+++ b/mandelbrot/Makefile
@@ -1,2 +1,5 @@
 all:
-	nvcc -std=c++11 mandelbrot.cu -lpng12
+	nvcc -O3 -std=c++11 mandelbrot.cu -lpng12
+
+th:
+	nvcc -O3 -std=c++11 mandelbrot_thrust.cu -lpng12
