--- a/ising/Makefile
+++ b/ising/Makefile
@@ -4,6 +4,9 @@ all:
 nooutput:
 	nvcc -std=c++11 -O3 ising_model.cu -o ising -lcurand -lpng12
 
+text:
+	nvcc -std=c++11 -O3 -DOUTPUT_TEXT ising_model.cu -o ising -lcurand -lpng12
+
 gif:
 	convert -loop 0 -delay 4 ising*.png ising.gif
 
