--- a/mandelbrot/Makefile
+++ b/mandelbrot/Makefile
@@ -1,5 +1,5 @@
 all:
-	nvcc -O3 -std=c++11 mandelbrot.cu -lpng12
+	nvcc -O3 -std=c++11 mandelbrot.cu -o mandelbrot -lpng12
 
 th:
-	nvcc -O3 -std=c++11 mandelbrot_thrust.cu -lpng12
+	nvcc -O3 -std=c++11 mandelbrot_thrust.cu -o mandelbrot -lpng12
